--- a/index.html
+++ b/index.html
@@ -4,13 +4,31 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/checklists.png">
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/regular.min.css" integrity="sha512-1yhsV5mlXC9Ve9GDpVWlM/tpG2JdCTMQGNJHvV5TEzAJycWtHfH0/HHSDzHFhFgqtFsm1yWyyHqssFERrYlenA==" crossorigin="anonymous" />
   <link rel="stylesheet" href="./sass/style.css">
   <title>Todo app</title>
 
 </head>
 <body>
+
+  <main>
+    <section class="top">
+      <header>
+        <h1>TODO</h1>
+        <img src="./images/icon-sun.svg" alt="">
+    </header>
+    <form>
+      <button type="submit" class="todoSubmit"><i class="far fa-circle"></i></button>
+      <input type="text" class="todoInput">
+    </form>
+  </section>
+  <section class="bottom">
+
+  </section>
+</main>
 
 
   <script src="./app.js"></script>
