3. Added the remove todo functionality.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,11 @@
       <button type="submit" class="todoSubmit"><i class="far fa-circle"></i></button>
       <input type="text" class="todoInput">
     </form>
+    <div class="todoContainer">
+      <ul class="todoList"></ul>
+    </div>
   </section>
-  <section class="bottom">
 
-  </section>
 </main>
 
 
