4. Added the filter functionality.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,15 @@
       <input type="text" class="todoInput">
     </form>
     <div class="todoContainer">
-      <ul class="todoList"></ul>
+      <ul class="todoList"><div class="footer">
+          <span class="item-count">0 items left</span>
+          <div class="center-div">
+            <li class="all" value="all">All</li>
+            <li class="completed" value="completed">Completed</li>
+            <li class="uncompleted" value="uncompleted">Active</li>
+          </div>
+          <p class="clear-completed">Clear Completed</p>
+        </div></ul>
     </div>
   </section>
 
