5. Added local storage functionality and dark-mode.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="top">
       <header>
         <h1>TODO</h1>
-        <img src="./images/icon-sun.svg" alt="">
+        <img class='night-mode' src="./images/icon-sun.svg" alt="">
     </header>
     <form>
       <button type="submit" class="todoSubmit"><i class="far fa-circle"></i></button>
@@ -26,7 +26,7 @@
     </form>
     <div class="todoContainer">
       <ul class="todoList"><div class="footer">
-          <span class="item-count">0 items left</span>
+          <span class="item-count"><h3 class="todoNumber">0</h3> items left</span>
           <div class="center-div">
             <li class="all" value="all">All</li>
             <li class="completed" value="completed">Completed</li>
